--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,19 @@ Flask-Session
 werkzeug
 Flask-Login
 flasgger
+blinker
+cachelib
+click
+colorama
+distlib
+filelock
+greenlet
+gunicorn
+itsdangerous
+Jinja2
+MarkupSafe
+msgspec
+waitress
+packaging
+platformdirs
+typing_extensions
