--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,33 @@
-Flask
-flask-sqlalchemy
-virtualenv
-uuid
-sqlalchemy
-Flask-Session
-werkzeug
-Flask-Login
-flasgger
-blinker
-cachelib
-click
-colorama
-distlib
-filelock
-greenlet
-gunicorn
-itsdangerous
-Jinja2
-MarkupSafe
-msgspec
-waitress
-packaging
-platformdirs
-typing_extensions
+attrs==25.1.0
+blinker==1.9.0
+cachelib==0.13.0
+click==8.1.8
+colorama==0.4.6
+distlib==0.3.9
+filelock==3.17.0
+flasgger==0.9.7.1
+Flask==3.1.0
+Flask-Login==0.6.3
+Flask-Session==0.8.0
+Flask-SQLAlchemy==3.1.1
+greenlet==3.1.1
+gunicorn==23.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+MarkupSafe==3.0.2
+mistune==3.1.2
+msgspec==0.19.0
+packaging==24.2
+platformdirs==4.3.6
+PyYAML==6.0.2
+referencing==0.36.2
+rpds-py==0.23.1
+six==1.17.0
+SQLAlchemy==2.0.39
+typing_extensions==4.12.2
+uuid==1.30
+virtualenv==20.29.3
+waitress==3.0.2
+Werkzeug==3.1.3
